lab1/Test/L1-A-11-26.cmm
Yz {
  int l ;
}FgcSm_wYuZUPcA , cFCo2n [ 1854769030 ] 

;
struct {
  struct Yvbbbpq7VWj7BqBVk5G Yrfke_zqcUCmQg ;
}wEsBsXY ( struct A534soAIKro_0 yWX , struct < xxI4h 
  EJ9ilqRe1997ee1Pkq ) {
}
int ;
struct f6fTrc MqxB ( ) {
  float dfjeyRCQLcCO0 , B7m3OmDXd5VLn1 = BGdxK_L1SMHg4j 
    ;
  if ( dbSABt )   return HTYNq3H2tm = PndXVMVMAlbgSZBG6 
    || V0mWwlkYbDEetto < _hoZ8o ( nFZROSn83zroBOgY , JWcd_nx_nN 
    && F65vV == xuF5w0VX7 - ! - j0AgM70 [ t6Tc70SdRc9 
    >= ( a5_RT || tJGYiDcJTOEgOMw2AlH && b0rtmleyJ6GM0cTmTB_I 
    > EWg0zIM2_6U6HtF [ oSV1abqc4nIIRPeGZ = ( lkXUP6tRqz1lYl4HVIT 
    <= E9ZPeakch ) != ! ChR8tZ1qu ] ) + ! - 303455646.1384072766 
    . Qw0Q ] ) / ! - 861142415 . zr * dmP ( ) ;

}
int F ( ) {
  JtzBrvXRL ;
  vO ;
  VN ;
  if ( Y5_G3w5HSyP )   YN ;
else   if ( elMkAT4 )   XMCWWHU7nqaKJcU ;


  if ( D5w9v_D69mGcsdH ) {
    while ( IlW5_B_7NFs3lP0DS )     Ar ;

  }else   wSKvoBl5QYzfhvl 

}
